# Bifrost

./: .editorconfig  CMakeLists.txt
bifrost_cli/: CMakeLists.txt
bifrost_lib/: CMakeLists.txt  header-deps.cmake
bifrost_lib/include/: test_case.h
bifrost_lib/src/: test_case.cpp
bifrost_tests/: CMakeLists.txt  header-deps.cmake
bifrost_tests/src/: test_case_test.cpp
